--- a/team-script/package.json
+++ b/team-script/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "y-monaco": "^0.1.5",
+    "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.14"
   },
   "devDependencies": {
     "@types/node": "^20",
