--- a/team-script/package.json
+++ b/team-script/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "@monaco-editor/react": "^4.6.0",
     "next": "14.1.3",
     "react": "^18",
