--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@codingame/monaco-languageclient": "^0.17.4",
+    "@codingame/monaco-languageclient-react": "^7.0.0",
     "@monaco-editor/react": "^4.6.0",
     "next": "14.1.3",
     "react": "^18",
