--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-monaco-editor": "^0.55.0",
     "sass": "^1.71.1",
     "y-monaco": "^0.1.5",
     "y-webrtc": "^10.3.0",
