--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@monaco-editor/react": "^4.6.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "next": "14.1.3",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-monaco-editor": "^0.55.0",
