--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@codingame/monaco-languageclient": "^0.17.4",
     "@codingame/monaco-languageclient-react": "^7.0.0",
     "@monaco-editor/react": "^4.6.0",
+    "mkcert": "^3.2.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "next": "14.1.3",
     "peer": "^1.0.2",
